k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: NodePort
  ports:
    - port: 3200
      targetPort: 3200
      nodePort: 30007
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: app-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3200
